--- a/HumanBlastocyst.vcxproj
+++ b/HumanBlastocyst.vcxproj
@@ -72,6 +72,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>E:\Documents\Code\C++\PDCurses-3.9;$(IncludePath)</IncludePath>
+    <LibraryPath>E:\Documents\Code\C++\PDCurses-3.9\build;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -92,6 +94,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>pdcurses.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -139,15 +142,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Cell.cpp" />
-    <ClCompile Include="CellGrid.h" />
-    <ClCompile Include="Main.cpp" />
-    <ClCompile Include="SquareCellGrid.cpp" />
+    <ClCompile Include="src\Cell.cpp" />
+    <ClCompile Include="src\CellGrid.h" />
+    <ClCompile Include="src\Main.cpp" />
+    <ClCompile Include="src\RandomNumberGenerators.cpp" />
+    <ClCompile Include="src\SquareCellGrid.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Cell.h" />
-    <ClInclude Include="CellTypes.h" />
-    <ClInclude Include="SquareCellGrid.h" />
+    <ClInclude Include="src\Cell.h" />
+    <ClInclude Include="src\CellTypes.h" />
+    <ClInclude Include="src\RandomNumberGenerators.h" />
+    <ClInclude Include="src\SquareCellGrid.h" />
+    <ClInclude Include="src\Vector2D.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
