--- a/HumanBlastocyst.vcxproj.filters
+++ b/HumanBlastocyst.vcxproj.filters
@@ -15,27 +15,36 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Main.cpp">
+    <ClCompile Include="src\Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Cell.cpp">
+    <ClCompile Include="src\Cell.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="SquareCellGrid.cpp">
+    <ClCompile Include="src\SquareCellGrid.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="CellGrid.h">
+    <ClCompile Include="src\CellGrid.h">
       <Filter>Header Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\RandomNumberGenerators.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Cell.h">
+    <ClInclude Include="src\Cell.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="CellTypes.h">
+    <ClInclude Include="src\CellTypes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="SquareCellGrid.h">
+    <ClInclude Include="src\SquareCellGrid.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Vector2D.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\RandomNumberGenerators.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
