--- a/HumanBlastocyst.vcxproj
+++ b/HumanBlastocyst.vcxproj
@@ -72,11 +72,13 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>D:\Documents\University\Year 4\Project\Simulation\PDCurses-3.9;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\Documents\University\Year 4\Project\Simulation\PDCurses-3.9\wincon;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(IncludePath);C:\Program Files\boost\boost_1_77_0;D:\Documents\University\Year 4\Project\Simulation\PDCurses-3.9</IncludePath>
+    <LibraryPath>C:\Program Files\boost\boost_1_77_0\stage\lib;D:\Documents\University\Year 4\Project\Simulation\PDCurses-3.9\wincon;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>$(IncludePath);C:\Program Files\boost\boost_1_77_0;D:\Documents\University\Year 4\Project\Simulation\PDCurses-3.9</IncludePath>
+    <LibraryPath>C:\Program Files\boost\boost_1_77_0\stage\lib;D:\Documents\University\Year 4\Project\Simulation\PDCurses-3.9\wincon;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
@@ -111,6 +113,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>pdcurses.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
