--- a/HumanBlastocyst.vcxproj
+++ b/HumanBlastocyst.vcxproj
@@ -158,6 +158,11 @@
     <ClInclude Include="src\headers\SquareCellGrid.h" />
     <ClInclude Include="src\headers\Vector2D.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".gitattributes" />
+    <None Include=".gitignore" />
+    <None Include="README.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
