--- a/HumanBlastocyst.vcxproj.filters
+++ b/HumanBlastocyst.vcxproj.filters
@@ -48,4 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
+    <None Include=".gitignore" />
+    <None Include=".gitattributes" />
+  </ItemGroup>
 </Project>
