--- a/HumanBlastocyst.vcxproj.filters
+++ b/HumanBlastocyst.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="src\RandomNumberGenerators.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\SuperCell.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\headers\Cell.h">
@@ -45,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\headers\RandomNumberGenerators.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\headers\SuperCell.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
