Prep for new perimeter calculations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ project (HumanBlastocyst)
 file(GLOB SRC "src/Main.cpp" "src/Cell.cpp" "src/RandomNumberGenerators.cpp" "src/SquareCellGrid.cpp" "src/SuperCell.cpp")
 file(GLOB HDR "src/headers/Cell.h" "src/headers/CellTypes.h" "src/headers/RandomNumberGenerators.h" "src/headers/SquareCellGrid.h" "src/headers/SuperCell.h" "src/headers/Vector2D.h")
 
-add_executable (HumanBlastocyst ${SRC} ${HDR})
+add_executable (HumanBlastocyst ${SRC} ${HDR} "src/headers/MathConstants.h")
 
 # TODO: Add tests and install targets if needed.
 
