Small image loading fix

--- a/default.cfg
+++ b/default.cfg
@@ -1,4 +1,4 @@
-#SETTINGS
+#Simulation parameters
 SIM_PARAM,MAX_MCS,864000
 SIM_PARAM,PIXEL_SCALE,4
 SIM_PARAM,DELAY,0
@@ -8,3 +8,9 @@ SIM_PARAM,BOLTZ_TEMP,10.0
 SIM_PARAM,OMEGA,1.0
 SIM_PARAM,LAMBDA,5.0
 SIM_PARAM,SIGMA,0.0
+#
+#
+#Initial Supercells
+#
+#
+#Supercell map
