--- a/default.cfg
+++ b/default.cfg
@@ -10,7 +10,109 @@ SIM_PARAM,LAMBDA,5.0
 SIM_PARAM,SIGMA,0.0
 #
 #
+# Cell Types
+# 
+# 1 should always be empty space
+#
+#
+# Boundary
+CELL_TYPE,0
+J,1000000.0:1000000.0:1000000.0:1000000.0:1000000.0:1000000.0:1000000.0
+DO_DIVIDE,0
+IS_STATIC,1
+IGNORE_VOLUME,1
+IGNORE_SURFACE,1
+END_TYPE
+#
+# Empty Space
+CELL_TYPE,1
+J,1000000.0:0.0:0.0:50.0:50.0:50.0:50.0
+DO_DIVIDE,0
+IS_STATIC,0
+IGNORE_VOLUME,1
+IGNORE_SURFACE,1
+END_TYPE
+#
+# Fluid
+CELL_TYPE,2
+J,1000000.0:0.0:0.0:50.0:50.0:50.0:50.0
+DO_DIVIDE,0
+IS_STATIC,0
+IGNORE_VOLUME,0
+IGNORE_SURFACE,1
+END_TYPE
+#
+# Morula
+CELL_TYPE,3
+J,1000000.0:0.0:0.0:35.0:40.0:100.0:100.0
+DO_DIVIDE,1
+IS_STATIC,0
+IGNORE_VOLUME,0
+IGNORE_SURFACE,0
+DIV_MEAN,12
+DIV_SD,0.5
+DIV_TYPE,1
+END_TYPE
+#
+# Compact
+CELL_TYPE,4
+J,1000000.0:0.0:0.0:40.0:20.0:100.0:100.0
+DO_DIVIDE,0
+IS_STATIC,0
+IGNORE_VOLUME,0
+IGNORE_SURFACE,0
+END_TYPE
+#
+# Trophectoderm
+CELL_TYPE,5
+J,1000000.0:0.0:0.0:0.0:0.0:15.0:50.0
+DO_DIVIDE,1
+IS_STATIC,0
+IGNORE_VOLUME,0
+IGNORE_SURFACE,0
+DIV_MEAN,9
+DIV_SD,3
+DIV_TYPE,0
+END_TYPE
+#
+# ICM
+CELL_TYPE,6
+J,1000000.0:0.0:0.0:0.0:0.0:50.0:20.0
+DO_DIVIDE,1
+IS_STATIC,0
+IGNORE_VOLUME,0
+IGNORE_SURFACE,0
+DIV_MEAN,12
+DIV_SD,1
+DIV_TYPE,0
+END_TYPE
+#
 #Initial Supercells
 #
+#0 should always be boundary
+#1 should always be Empty space
 #
-#Supercell map
+#Boundary
+SUPERCELL,0
+TYPE,0
+LOAD_COLOUR,255
+END_SUPER
+#
+#Empty Space
+SUPERCELL,1
+TYPE,1
+LOAD_COLOUR,0
+END_SUPER
+#
+#Fluid
+SUPERCELL,2
+TYPE,2
+INITIAL_VOLUME,50
+END_SUPER
+#
+# First Morula
+SUPERCELL,3
+TYPE,3
+INITIAL_VOLUME,3600
+LOAD_COLOUR,100
+END_SUPER
