Cell type now int (dodgy)

--- a/default.cfg
+++ b/default.cfg
@@ -116,3 +116,27 @@ TYPE,3
 INITIAL_VOLUME,3600
 LOAD_COLOUR,100
 END_SUPER
+#
+#
+#Colour Generator options
+#
+#Morula
+COLOUR_SCHEME,0
+R,150,255
+G,0,75
+B,0,75
+END_COLOUR
+#
+#Trophectoderm
+COLOUR_SCHEME
+R,0,75
+G,0,75
+B,150,255
+END_COLOUR
+#
+#ICM
+COLOUR_SCHEME
+R,0,75
+G,150,255
+B,0,75
+END_COLOUR
