Colours read from file

--- a/default.cfg
+++ b/default.cfg
@@ -22,6 +22,7 @@ DO_DIVIDE,0
 IS_STATIC,1
 IGNORE_VOLUME,1
 IGNORE_SURFACE,1
+COLOUR,0
 END_TYPE
 #
 # Empty Space
@@ -31,6 +32,7 @@ DO_DIVIDE,0
 IS_STATIC,0
 IGNORE_VOLUME,1
 IGNORE_SURFACE,1
+COLOUR,1
 END_TYPE
 #
 # Fluid
@@ -40,6 +42,7 @@ DO_DIVIDE,0
 IS_STATIC,0
 IGNORE_VOLUME,0
 IGNORE_SURFACE,1
+COLOUR,2
 END_TYPE
 #
 # Morula
@@ -53,6 +56,7 @@ DIV_MEAN,12
 DIV_SD,0.5
 DIV_TYPE,2
 DIV_MIN_VOL,400
+COLOUR,3
 END_TYPE
 #
 # Compact
@@ -62,6 +66,7 @@ DO_DIVIDE,0
 IS_STATIC,0
 IGNORE_VOLUME,0
 IGNORE_SURFACE,0
+COLOUR,3
 END_TYPE
 #
 # Trophectoderm
@@ -74,6 +79,7 @@ IGNORE_SURFACE,0
 DIV_MEAN,9
 DIV_SD,3
 DIV_TYPE,0
+COLOUR,4
 END_TYPE
 #
 # ICM
@@ -86,6 +92,7 @@ IGNORE_SURFACE,0
 DIV_MEAN,12
 DIV_SD,1
 DIV_TYPE,0
+COLOUR,5
 END_TYPE
 #
 #Initial Supercells
@@ -121,22 +128,43 @@ END_SUPER
 #
 #Colour Generator options
 #
-#Morula
+#Boundary
 COLOUR_SCHEME,0
+R,255,255
+G,255,255
+B,255,255
+END_COLOUR
+#
+#Empty Space
+COLOUR_SCHEME,1
+R,0,0
+G,0,0
+B,0,0
+END_COLOUR
+#
+#Fluid
+COLOUR_SCHEME,2
+R,154,154
+G,102,102
+B,102,102
+END_COLOUR
+#
+#Morula
+COLOUR_SCHEME,3
 R,150,255
 G,0,75
 B,0,75
 END_COLOUR
 #
 #Trophectoderm
-COLOUR_SCHEME
+COLOUR_SCHEME,4
 R,0,75
 G,0,75
 B,150,255
 END_COLOUR
 #
 #ICM
-COLOUR_SCHEME
+COLOUR_SCHEME,5
 R,0,75
 G,150,255
 B,0,75
