--- a/default.cfg
+++ b/default.cfg
@@ -188,3 +188,41 @@ G,150,255
 B,0,75
 END_COLOUR
 #
+#################################
+# Events
+#
+# Type 0 is all
+# Type 1 is contact with transform data
+#
+# Compaction
+#
+EVENT_DEFINE,0
+TIME_MEAN,72.0
+TIME_SD,0.5
+TRANSFORM_FROM,3
+TRANSFORM_TO,4
+UPDATE_COLOUR,0
+UPDATE_DIV,0
+END_EVENT
+#
+# Trophectoderm
+#
+EVENT_DEFINE,1
+TIME_MEAN,96.0
+TIME_SD,1.0
+TRANSFORM_FROM,4
+TRANSFORM_TO,5
+TRANSFORM_TYPE,1
+TRANSFORM_DATA,1
+END_EVENT
+#
+# ICM
+#
+EVENT_DEFINE,2
+TIME_MEAN,0.0
+TIME_SD,0.0
+TRANSFORM_FROM,4
+TRANSFORM_TO,6
+WAIT_FOR_OTHER,1
+EVENT_TO_WAIT,1
+END_EVENT
