--- a/demos/sort.cfg
+++ b/demos/sort.cfg
@@ -1,5 +1,5 @@
 #Simulation parameters
-SIM_PARAM,MAX_MCS,84000
+SIM_PARAM,MAX_MCS,864000
 SIM_PARAM,PIXEL_SCALE,4
 SIM_PARAM,DELAY,0
 SIM_PARAM,FPS,60
@@ -18,7 +18,7 @@ SIM_PARAM,SIGMA,0.0
 # Boundary
 #
 CELL_TYPE,0
-J,0.0:0.0:1000000.0:1000000.0:1000000.0:1000000.0:1000000.0
+J,0.0:0.0:500.0:500.0:500.0
 DO_DIVIDE,0
 IS_STATIC,1
 IGNORE_VOLUME,1
@@ -29,7 +29,7 @@ END_TYPE
 # Empty Space
 #
 CELL_TYPE,1
-J,0.0:0.0:0.0:50.0:50.0:50.0:50.0
+J,0.0:0.0:50.0:25.0:70.0
 DO_DIVIDE,0
 IS_STATIC,0
 IGNORE_VOLUME,1
@@ -37,36 +37,25 @@ IGNORE_SURFACE,1
 COLOUR,1
 END_TYPE
 #
-# Fluid
+# Cell Setup
 #
 CELL_TYPE,2
-J,1000000.0:0.0:0.0:50.0:50.0:50.0:50.0
-DO_DIVIDE,0
+J,200.0:50.0:40.0:40.0:40.0
+DO_DIVIDE,1
 IS_STATIC,0
 IGNORE_VOLUME,0
-IGNORE_SURFACE,1
+IGNORE_SURFACE,0
+DIV_MEAN,0.1
+DIV_SD,0.0001
+DIV_TYPE,2
 COLOUR,2
+DIV_MIN_VOL,100
 END_TYPE
 #
-# Morula
+# Blue Cells
 #
 CELL_TYPE,3
-J,1000000.0:50.0:50.0:70.0:40.0:100.0:100.0
-DO_DIVIDE,1
-IS_STATIC,0
-IGNORE_VOLUME,0
-IGNORE_SURFACE,0
-DIV_MEAN,12
-DIV_SD,0.5
-DIV_TYPE,2
-DIV_MIN_VOL,400
-COLOUR,3
-END_TYPE
-#
-# Compact
-#
-CELL_TYPE,4
-J,1000000.0:50.0:50.0:40.0:35.0:100.0:100.0
+J,200.0:25.0:40.0:15.0:30.0
 DO_DIVIDE,0
 IS_STATIC,0
 IGNORE_VOLUME,0
@@ -74,34 +63,16 @@ IGNORE_SURFACE,0
 COLOUR,3
 END_TYPE
 #
-# Trophectoderm
+# Green Cells
 #
-CELL_TYPE,5
-J,1000000.0:50.0:50.0:100.0:100.0:15.0:50.0
-DO_DIVIDE,1
+CELL_TYPE,4
+J,200.0:70.0:40.0:30.0:15.0
+DO_DIVIDE,0
 IS_STATIC,0
 IGNORE_VOLUME,0
 IGNORE_SURFACE,0
-DIV_MEAN,9
-DIV_SD,3
-DIV_TYPE,0
 COLOUR,4
 END_TYPE
-#
-# ICM
-#
-CELL_TYPE,6
-J,1000000.0:50.0:50.0:100.0:100.0:50.0:20.0
-DO_DIVIDE,1
-IS_STATIC,0
-IGNORE_VOLUME,0
-IGNORE_SURFACE,0
-DIV_MEAN,12
-DIV_SD,1
-DIV_TYPE,0
-COLOUR,5
-END_TYPE
-#
 ###########################################################################
 #Initial Supercells
 #
@@ -122,22 +93,14 @@ TYPE,1
 LOAD_COLOUR,0
 END_SUPER
 #
-#Fluid
+# Cell Setup
 #
 SUPERCELL,2
 TYPE,2
-INITIAL_VOLUME,50
-END_SUPER
-#
-# First Morula
-#
-SUPERCELL,3
-TYPE,3
-INITIAL_VOLUME,3600
+INITIAL_VOLUME,12800
 INITIAL_LENGTH,240
 LOAD_COLOUR,100
 END_SUPER
-#
 ###########################################
 #Colour Generator options
 #
@@ -156,73 +119,55 @@ G,0,0
 B,0,0
 END_COLOUR
 #
-#Fluid
+#Config Cell
 #
 COLOUR_SCHEME,2
-R,154,154
-G,102,102
-B,102,102
+R,100,200
+G,100,200
+B,100,200
 END_COLOUR
 #
-#Morula
+# Cell 1
 #
 COLOUR_SCHEME,3
-R,150,255
-G,0,75
-B,0,75
+R,0,100
+G,0,0
+B,100,255
 END_COLOUR
 #
-#Trophectoderm
+# Cell 2
 #
 COLOUR_SCHEME,4
-R,0,75
-G,0,75
-B,150,255
+R,0,100
+G,100,255
+B,0,0
 END_COLOUR
+#########################################
+#Events
 #
-#ICM
 #
-COLOUR_SCHEME,5
-R,0,75
-G,150,255
-B,0,75
-END_COLOUR
-#
-#################################
-# Events
-#
-# Type 0 is all
-# Type 1 is contact with transform data
-#
-# Compaction
+# Random blue
 #
 EVENT_DEFINE,0
-TIME_MEAN,72.0
-TIME_SD,0.5
-TRANSFORM_FROM,3
-TRANSFORM_TO,4
-UPDATE_COLOUR,0
+TIME_MEAN,1.0
+TIME_SD,0.0
+TRANSFORM_FROM,2
+TRANSFORM_TO,3
+TRANSFORM_TYPE,2
+TRANSFORM_DATA,60
+UPDATE_COLOUR,1
 UPDATE_DIV,0
 END_EVENT
 #
-# Trophectoderm
+# Remainder green
 #
 EVENT_DEFINE,1
-TIME_MEAN,96.0
-TIME_SD,1.0
-TRANSFORM_FROM,4
-TRANSFORM_TO,5
-TRANSFORM_TYPE,1
-TRANSFORM_DATA,1
-END_EVENT
-#
-# ICM
-#
-EVENT_DEFINE,2
 TIME_MEAN,0.0
 TIME_SD,0.0
-TRANSFORM_FROM,4
-TRANSFORM_TO,6
+TRANSFORM_FROM,2
+TRANSFORM_TO,4
+UPDATE_COLOUR,1
+UPDATE_DIV,0
 WAIT_FOR_OTHER,1
-EVENT_TO_WAIT,1
+EVENT_TO_WAIT,0
 END_EVENT
