--- a/demos/sort.cfg
+++ b/demos/sort.cfg
@@ -49,10 +49,10 @@ DIV_MEAN,0.1
 DIV_SD,0.0001
 DIV_TYPE,2
 COLOUR,2
-DIV_MIN_VOL,100
+DIV_MIN_VOL,200
 END_TYPE
 #
-# Blue Cells
+# Purple Cells
 #
 CELL_TYPE,3
 J,200.0:25.0:40.0:15.0:30.0
@@ -63,7 +63,7 @@ IGNORE_SURFACE,0
 COLOUR,3
 END_TYPE
 #
-# Green Cells
+# Yellow Cells
 #
 CELL_TYPE,4
 J,200.0:70.0:40.0:30.0:15.0
@@ -130,7 +130,7 @@ END_COLOUR
 # Cell 1
 #
 COLOUR_SCHEME,3
-R,0,100
+R,100,200
 G,0,0
 B,100,255
 END_COLOUR
@@ -138,8 +138,8 @@ END_COLOUR
 # Cell 2
 #
 COLOUR_SCHEME,4
-R,0,100
-G,100,255
+R,190,255
+G,100,225
 B,0,0
 END_COLOUR
 #########################################
