Added some comments to demos

--- a/demos/sort.cfg
+++ b/demos/sort.cfg
@@ -1,3 +1,5 @@
+# Demo of cell sorting with two cells. Purple cells are more adhesive to extracellular medium.
+#
 #Simulation parameters
 SIM_PARAM,MAX_MCS,864000
 SIM_PARAM,PIXEL_SCALE,4
@@ -146,7 +148,9 @@ END_COLOUR
 #Events
 #
 #
-# Random blue
+#Random Purple
+#
+# Change TRANSFORM_DATA to change the percentage of purple cells
 #
 EVENT_DEFINE,0
 TIME_MEAN,1.0
@@ -159,7 +163,7 @@ UPDATE_COLOUR,1
 UPDATE_DIV,0
 END_EVENT
 #
-# Remainder green
+# Remainder Yellow
 #
 EVENT_DEFINE,1
 TIME_MEAN,0.0
