--- a/demos/sort3type.cfg
+++ b/demos/sort3type.cfg
@@ -1,3 +1,5 @@
+# Cell sorting with 3 cell types. Blue cells are more adhesive to the medium
+#
 #Simulation parameters
 SIM_PARAM,MAX_MCS,864000
 SIM_PARAM,PIXEL_SCALE,4
@@ -165,7 +167,8 @@ END_COLOUR
 #Events
 #
 #
-# Random Purple
+# Generate Blue cells
+# Change TRANSFORM_DATA to change percentage of total cells to become blue
 #
 EVENT_DEFINE,0
 TIME_MEAN,1.0
@@ -178,7 +181,8 @@ UPDATE_COLOUR,1
 UPDATE_DIV,0
 END_EVENT
 #
-# Random Yellow
+# Generate Green
+# Change TRANSFORM_DATA to change percentage of not blue cells to become green
 #
 EVENT_DEFINE,1
 TIME_MEAN,0.0
@@ -193,7 +197,7 @@ WAIT_FOR_OTHER,1
 EVENT_TO_WAIT,0
 END_EVENT
 #
-# remainder pink green
+# remainder Red
 #
 EVENT_DEFINE,2
 TIME_MEAN,0.0
