--- a/demos/test.cfg
+++ b/demos/test.cfg
@@ -1,3 +1,5 @@
+# Cells in a tube
+#
 #Simulation parameters
 SIM_PARAM,MAX_MCS,864000
 SIM_PARAM,PIXEL_SCALE,4
@@ -103,7 +105,7 @@ G,0,0
 B,0,0
 END_COLOUR
 #
-#Morula
+# Cell
 #
 COLOUR_SCHEME,2
 R,150,255
