--- a/demos/sortICM.cfg
+++ b/demos/sortICM.cfg
@@ -1,10 +1,13 @@
+# Demo of ICM cell sorting
+# Boundary represents trophectoderm, medium is blastocele. Purple cells are more adhesive to medium, yellow cells are more adhesive to boundary
+#
 #Simulation parameters
-SIM_PARAM,MAX_MCS,864000
+SIM_PARAM,MAX_MCS,84000
 SIM_PARAM,PIXEL_SCALE,4
 SIM_PARAM,DELAY,0
 SIM_PARAM,FPS,60
 SIM_PARAM,MCS_HOUR_EST,500
-SIM_PARAM,BOLTZ_TEMP,20.0
+SIM_PARAM,BOLTZ_TEMP,30.0
 SIM_PARAM,OMEGA,1.0
 SIM_PARAM,LAMBDA,5.0
 SIM_PARAM,SIGMA,0.0
@@ -18,7 +21,7 @@ SIM_PARAM,SIGMA,0.0
 # Boundary
 #
 CELL_TYPE,0
-J,0.0:0.0:500.0:500.0:500.0
+J,0.0:0.0:500.0:25.0:15.0
 DO_DIVIDE,0
 IS_STATIC,1
 IGNORE_VOLUME,1
@@ -40,7 +43,7 @@ END_TYPE
 # Cell Setup
 #
 CELL_TYPE,2
-J,200.0:50.0:40.0:40.0:40.0
+J,500.0:50.0:40.0:40.0:40.0
 DO_DIVIDE,1
 IS_STATIC,0
 IGNORE_VOLUME,0
@@ -52,10 +55,10 @@ COLOUR,2
 DIV_MIN_VOL,400
 END_TYPE
 #
-# Blue Cells
+# Purple Cells
 #
 CELL_TYPE,3
-J,200.0:25.0:40.0:15.0:30.0
+J,30.0:25.0:40.0:15.0:30.0
 DO_DIVIDE,0
 IS_STATIC,0
 IGNORE_VOLUME,0
@@ -63,10 +66,10 @@ IGNORE_SURFACE,0
 COLOUR,3
 END_TYPE
 #
-# Green Cells
+# Yellow Cells
 #
 CELL_TYPE,4
-J,200.0:70.0:40.0:30.0:15.0
+J,15.0:70.0:40.0:30.0:15.0
 DO_DIVIDE,0
 IS_STATIC,0
 IGNORE_VOLUME,0
@@ -97,7 +100,7 @@ END_SUPER
 #
 SUPERCELL,2
 TYPE,2
-INITIAL_VOLUME,3600
+INITIAL_VOLUME,12800
 INITIAL_LENGTH,240
 LOAD_COLOUR,100
 END_SUPER
@@ -130,7 +133,7 @@ END_COLOUR
 # Cell 1
 #
 COLOUR_SCHEME,3
-R,0,100
+R,100,200
 G,0,0
 B,100,255
 END_COLOUR
@@ -138,15 +141,16 @@ END_COLOUR
 # Cell 2
 #
 COLOUR_SCHEME,4
-R,0,100
-G,100,255
+R,190,255
+G,100,225
 B,0,0
 END_COLOUR
 #########################################
 #Events
 #
 #
-# Random blue
+# Random Purple
+# Change the "Transform data" number to alter the percentage of purple cells
 #
 EVENT_DEFINE,0
 TIME_MEAN,1.0
@@ -154,12 +158,12 @@ TIME_SD,0.0
 TRANSFORM_FROM,2
 TRANSFORM_TO,3
 TRANSFORM_TYPE,2
-TRANSFORM_DATA,60
+TRANSFORM_DATA,30
 UPDATE_COLOUR,1
 UPDATE_DIV,0
 END_EVENT
 #
-# Remainder green
+# Remainder yellow
 #
 EVENT_DEFINE,1
 TIME_MEAN,0.0
