Cell transform type 3 (designed for fluid creation)

--- a/default.cfg
+++ b/default.cfg
@@ -3,7 +3,7 @@ SIM_PARAM,MAX_MCS,84000
 SIM_PARAM,PIXEL_SCALE,4
 SIM_PARAM,DELAY,0
 SIM_PARAM,FPS,60
-SIM_PARAM,MCS_HOUR_EST,500
+SIM_PARAM,MCS_HOUR_EST,100
 SIM_PARAM,BOLTZ_TEMP,20.0
 SIM_PARAM,OMEGA,1.0
 SIM_PARAM,LAMBDA,5.0
@@ -168,7 +168,7 @@ END_COLOUR
 #
 COLOUR_SCHEME,3
 R,150,255
-G,0,75
+G,0,25
 B,0,75
 END_COLOUR
 #
@@ -225,4 +225,17 @@ TRANSFORM_FROM,4
 TRANSFORM_TO,6
 WAIT_FOR_OTHER,1
 EVENT_TO_WAIT,1
+END_EVENT
+#
+# Fluid Creation
+#
+EVENT_DEFINE,3
+TIME_MEAN,0.0
+TIME_SD,0.0
+TRANSFORM_FROM,6
+TRANSFORM_TO,2
+TRANSFORM_TYPE,3
+WAIT_FOR_OTHER,1
+EVENT_TO_WAIT,2
+TRANSFORM_DATA,10
 END_EVENT
