Kind of naff fluid implementation

--- a/default.cfg
+++ b/default.cfg
@@ -82,7 +82,7 @@ DO_DIVIDE,1
 IS_STATIC,0
 IGNORE_VOLUME,0
 IGNORE_SURFACE,0
-DIV_MEAN,9
+DIV_MEAN,12
 DIV_SD,3
 DIV_TYPE,0
 COLOUR,4
@@ -230,7 +230,7 @@ END_EVENT
 # Fluid Creation
 #
 EVENT_DEFINE,3
-TIME_MEAN,0.0
+TIME_MEAN,0.25
 TIME_SD,0.0
 TRANSFORM_FROM,6
 TRANSFORM_TO,2
@@ -238,4 +238,5 @@ TRANSFORM_TYPE,3
 WAIT_FOR_OTHER,1
 EVENT_TO_WAIT,2
 TRANSFORM_DATA,10
+DO_REPEAT,1
 END_EVENT
