--- a/default.cfg
+++ b/default.cfg
@@ -234,9 +234,23 @@ TIME_MEAN,0.25
 TIME_SD,0.0
 TRANSFORM_FROM,6
 TRANSFORM_TO,2
-TRANSFORM_TYPE,3
+TRANSFORM_TYPE,4
 WAIT_FOR_OTHER,1
 EVENT_TO_WAIT,2
-TRANSFORM_DATA,10
+TRANSFORM_DATA,5
+DO_REPEAT,0
+END_EVENT
+#
+# Extra Fluid Creation
+#
+EVENT_DEFINE,4
+TIME_MEAN,0.25
+TIME_SD,0.0
+TRANSFORM_FROM,6
+TRANSFORM_TO,2
+TRANSFORM_TYPE,4
+WAIT_FOR_OTHER,1
+EVENT_TO_WAIT,3
+TRANSFORM_DATA,2
 DO_REPEAT,1
 END_EVENT
