Division minimum ratio simulates division stress requirement

--- a/default.cfg
+++ b/default.cfg
@@ -82,9 +82,10 @@ DO_DIVIDE,1
 IS_STATIC,0
 IGNORE_VOLUME,0
 IGNORE_SURFACE,0
-DIV_MEAN,12
+DIV_MEAN,3
 DIV_SD,3
-DIV_TYPE,0
+DIV_TYPE,1
+DIV_MIN_RATIO,10.0
 COLOUR,4
 END_TYPE
 #
@@ -244,7 +245,7 @@ END_EVENT
 # Extra Fluid Creation
 #
 EVENT_DEFINE,4
-TIME_MEAN,0.25
+TIME_MEAN,1
 TIME_SD,0.0
 TRANSFORM_FROM,6
 TRANSFORM_TO,2
