Enable/disable event reporting

--- a/default.cfg
+++ b/default.cfg
@@ -254,4 +254,12 @@ WAIT_FOR_OTHER,1
 EVENT_TO_WAIT,3
 TRANSFORM_DATA,2
 DO_REPEAT,1
+REPORT_FIRE,0
 END_EVENT
+#
+# Salt and pepper Epiblast
+#
+#
+#
+# Endoderm
+#
