--- a/default.cfg
+++ b/default.cfg
@@ -18,7 +18,7 @@ SIM_PARAM,SIGMA,0.0
 # Boundary
 #
 CELL_TYPE,0
-J,0.0:0.0:1000000.0:1000000.0:1000000.0:1000000.0:1000000.0
+J,0.0:0.0:1000000.0:1000000.0:1000000.0:1000000.0:1000000.0:1000000.0:1000000.0
 DO_DIVIDE,0
 IS_STATIC,1
 IGNORE_VOLUME,1
@@ -29,7 +29,7 @@ END_TYPE
 # Empty Space
 #
 CELL_TYPE,1
-J,0.0:0.0:0.0:50.0:50.0:50.0:50.0
+J,0.0:0.0:0.0:50.0:50.0:50.0:50.0:50.0:50.0
 DO_DIVIDE,0
 IS_STATIC,0
 IGNORE_VOLUME,1
@@ -40,7 +40,7 @@ END_TYPE
 # Fluid
 #
 CELL_TYPE,2
-J,1000000.0:0.0:0.0:50.0:50.0:50.0:50.0
+J,1000000.0:0.0:0.0:50.0:50.0:50.0:50.0:70.0:25.0
 DO_DIVIDE,0
 IS_STATIC,0
 IGNORE_VOLUME,0
@@ -51,7 +51,7 @@ END_TYPE
 # Morula
 #
 CELL_TYPE,3
-J,1000000.0:50.0:50.0:70.0:40.0:100.0:100.0
+J,1000000.0:50.0:50.0:70.0:40.0:100.0:100.0:100.0:100.0
 DO_DIVIDE,1
 IS_STATIC,0
 IGNORE_VOLUME,0
@@ -66,7 +66,7 @@ END_TYPE
 # Compact
 #
 CELL_TYPE,4
-J,1000000.0:50.0:50.0:40.0:35.0:100.0:100.0
+J,1000000.0:50.0:50.0:40.0:35.0:100.0:100.0:100.0:100.0
 DO_DIVIDE,0
 IS_STATIC,0
 IGNORE_VOLUME,0
@@ -77,7 +77,7 @@ END_TYPE
 # Trophectoderm
 #
 CELL_TYPE,5
-J,1000000.0:50.0:50.0:100.0:100.0:15.0:70.0
+J,1000000.0:50.0:50.0:100.0:100.0:15.0:70.0:15.0:30.0
 DO_DIVIDE,1
 IS_STATIC,0
 IGNORE_VOLUME,0
@@ -92,7 +92,35 @@ END_TYPE
 # ICM
 #
 CELL_TYPE,6
-J,1000000.0:50.0:50.0:100.0:100.0:70.0:20.0
+J,1000000.0:50.0:50.0:100.0:100.0:70.0:20.0:100.0:100.0
+DO_DIVIDE,1
+IS_STATIC,0
+IGNORE_VOLUME,0
+IGNORE_SURFACE,0
+DIV_MEAN,12
+DIV_SD,1
+DIV_TYPE,0
+COLOUR,5
+END_TYPE
+#
+# Epiblast
+#
+CELL_TYPE,7
+J,1000000.0:50.0:70.0:100.0:100.0:15.0:100.0:30.0:15.0
+DO_DIVIDE,1
+IS_STATIC,0
+IGNORE_VOLUME,0
+IGNORE_SURFACE,0
+DIV_MEAN,12
+DIV_SD,1
+DIV_TYPE,0
+COLOUR,5
+END_TYPE
+#
+# Endoderm
+#
+CELL_TYPE,8
+J,1000000.0:50.0:25.0:100.0:100.0:30.0:100.0:15.0:30.0
 DO_DIVIDE,1
 IS_STATIC,0
 IGNORE_VOLUME,0
@@ -189,6 +217,21 @@ G,150,255
 B,0,75
 END_COLOUR
 #
+# Epiblast
+#
+COLOUR_SCHEME,6
+R,100,200
+G,0,0
+B,100,255
+END_COLOUR
+#
+# Endoderm
+#
+COLOUR_SCHEME,7
+R,190,255
+G,100,225
+B,0,0
+END_COLOUR
 #################################
 # Events
 #
