Blastocyst demo effectively complete
Small adjustment to config syntax. Update MAX_MCS -> MAX_HOURS.

--- a/default.cfg
+++ b/default.cfg
@@ -1,9 +1,9 @@
 #Simulation parameters
-SIM_PARAM,MAX_MCS,84000
+SIM_PARAM,MCS_HOUR_EST,100
+SIM_PARAM,MAX_HOURS,168.0
 SIM_PARAM,PIXEL_SCALE,4
 SIM_PARAM,DELAY,0
 SIM_PARAM,FPS,60
-SIM_PARAM,MCS_HOUR_EST,100
 SIM_PARAM,BOLTZ_TEMP,20.0
 SIM_PARAM,OMEGA,1.0
 SIM_PARAM,LAMBDA,5.0
@@ -77,7 +77,7 @@ END_TYPE
 # Trophectoderm
 #
 CELL_TYPE,5
-J,1000000.0:50.0:50.0:100.0:100.0:15.0:70.0:15.0:30.0
+J,1000000.0:50.0:50.0:100.0:100.0:15.0:70.0:40.0:70.0
 DO_DIVIDE,1
 IS_STATIC,0
 IGNORE_VOLUME,0
@@ -106,29 +106,29 @@ END_TYPE
 # Epiblast
 #
 CELL_TYPE,7
-J,1000000.0:50.0:70.0:100.0:100.0:15.0:100.0:30.0:15.0
-DO_DIVIDE,1
+J,1000000.0:50.0:70.0:100.0:100.0:40.0:100.0:15.0:30.0
+DO_DIVIDE,0
 IS_STATIC,0
 IGNORE_VOLUME,0
 IGNORE_SURFACE,0
 DIV_MEAN,12
 DIV_SD,1
 DIV_TYPE,0
-COLOUR,5
+COLOUR,6
 END_TYPE
 #
 # Endoderm
 #
 CELL_TYPE,8
-J,1000000.0:50.0:25.0:100.0:100.0:30.0:100.0:15.0:30.0
-DO_DIVIDE,1
+J,1000000.0:50.0:25.0:100.0:100.0:70.0:100.0:30.0:15.0
+DO_DIVIDE,0
 IS_STATIC,0
 IGNORE_VOLUME,0
 IGNORE_SURFACE,0
 DIV_MEAN,12
 DIV_SD,1
 DIV_TYPE,0
-COLOUR,5
+COLOUR,7
 END_TYPE
 #
 ###########################################################################
@@ -220,17 +220,17 @@ END_COLOUR
 # Epiblast
 #
 COLOUR_SCHEME,6
-R,100,200
-G,0,0
-B,100,255
+R,190,255
+G,100,225
+B,0,0
 END_COLOUR
 #
 # Endoderm
 #
 COLOUR_SCHEME,7
-R,190,255
-G,100,225
-B,0,0
+R,100,200
+G,0,0
+B,100,255
 END_COLOUR
 #################################
 # Events
@@ -302,7 +302,28 @@ END_EVENT
 #
 # Salt and pepper Epiblast
 #
-#
+EVENT_DEFINE,5
+TIME_MEAN,30.0
+TIME_SD,6.0
+TRANSFORM_FROM,6
+TRANSFORM_TO,7
+TRANSFORM_TYPE,2
+TRANSFORM_DATA,70
+UPDATE_COLOUR,1
+UPDATE_DIV,1
+WAIT_FOR_OTHER,1
+EVENT_TO_WAIT,1
+END_EVENT
 #
 # Endoderm
 #
+EVENT_DEFINE,6
+TIME_MEAN,0.0
+TIME_SD,0.0
+TRANSFORM_FROM,6
+TRANSFORM_TO,8
+UPDATE_COLOUR,1
+UPDATE_DIV,1
+WAIT_FOR_OTHER,1
+EVENT_TO_WAIT,5
+END_EVENT
