--- a/demos/sortICM.cfg
+++ b/demos/sortICM.cfg
@@ -2,11 +2,11 @@
 # Boundary represents trophectoderm, medium is blastocele. Purple cells are more adhesive to medium, yellow cells are more adhesive to boundary
 #
 #Simulation parameters
-SIM_PARAM,MAX_MCS,84000
+SIM_PARAM,MCS_HOUR_EST,500
+SIM_PARAM,MAX_HOURS,256
 SIM_PARAM,PIXEL_SCALE,4
 SIM_PARAM,DELAY,0
 SIM_PARAM,FPS,60
-SIM_PARAM,MCS_HOUR_EST,500
 SIM_PARAM,BOLTZ_TEMP,30.0
 SIM_PARAM,OMEGA,1.0
 SIM_PARAM,LAMBDA,5.0
