AUTO_QUIT sim option to make batch running easier

--- a/default.cfg
+++ b/default.cfg
@@ -8,6 +8,7 @@ SIM_PARAM,BOLTZ_TEMP,20.0
 SIM_PARAM,OMEGA,1.0
 SIM_PARAM,LAMBDA,5.0
 SIM_PARAM,SIGMA,0.0
+SIM_PARAM,AUTO_QUIT,1
 #
 ###################################################################################
 # Cell Types
