Adjustments to default config

--- a/default.cfg
+++ b/default.cfg
@@ -1,5 +1,5 @@
 #Simulation parameters
-SIM_PARAM,MCS_HOUR_EST,100
+SIM_PARAM,MCS_HOUR_EST,250
 SIM_PARAM,MAX_HOURS,168.0
 SIM_PARAM,PIXEL_SCALE,4
 SIM_PARAM,DELAY,0
@@ -41,7 +41,7 @@ END_TYPE
 # Fluid
 #
 CELL_TYPE,2
-J,1000000.0:0.0:0.0:50.0:50.0:50.0:50.0:70.0:25.0
+J,1000000.0:0.0:0.0:50.0:50.0:50.0:50.0:70.0:50.0
 DO_DIVIDE,0
 IS_STATIC,0
 IGNORE_VOLUME,0
@@ -78,7 +78,7 @@ END_TYPE
 # Trophectoderm
 #
 CELL_TYPE,5
-J,1000000.0:50.0:50.0:100.0:100.0:15.0:70.0:30.0:50.0
+J,1000000.0:50.0:50.0:100.0:100.0:15.0:70.0:70.0:100.0
 DO_DIVIDE,1
 IS_STATIC,0
 IGNORE_VOLUME,0
@@ -107,7 +107,7 @@ END_TYPE
 # Epiblast
 #
 CELL_TYPE,7
-J,1000000.0:50.0:70.0:100.0:100.0:30.0:100.0:15.0:30.0
+J,1000000.0:50.0:70.0:100.0:100.0:70.0:100.0:15.0:30.0
 DO_DIVIDE,0
 IS_STATIC,0
 IGNORE_VOLUME,0
@@ -121,7 +121,7 @@ END_TYPE
 # Endoderm
 #
 CELL_TYPE,8
-J,1000000.0:50.0:25.0:100.0:100.0:50.0:100.0:30.0:15.0
+J,1000000.0:50.0:50.0:100.0:100.0:100.0:100.0:30.0:15.0
 DO_DIVIDE,0
 IS_STATIC,0
 IGNORE_VOLUME,0
@@ -270,6 +270,7 @@ TRANSFORM_FROM,4
 TRANSFORM_TO,6
 WAIT_FOR_OTHER,1
 EVENT_TO_WAIT,1
+VOLUME_MULT,0.5
 END_EVENT
 #
 # Fluid Creation
@@ -291,12 +292,12 @@ END_EVENT
 EVENT_DEFINE,4
 TIME_MEAN,0.20
 TIME_SD,0.0
-TRANSFORM_FROM,6
+TRANSFORM_FROM,2
 TRANSFORM_TO,2
 TRANSFORM_TYPE,4
 WAIT_FOR_OTHER,1
 EVENT_TO_WAIT,3
-TRANSFORM_DATA,2
+TRANSFORM_DATA,6
 DO_REPEAT,1
 REPORT_FIRE,0
 END_EVENT
