--- a/default.cfg
+++ b/default.cfg
@@ -329,3 +329,27 @@ UPDATE_DIV,1
 WAIT_FOR_OTHER,1
 EVENT_TO_WAIT,5
 END_EVENT
+#
+#########################
+#
+# Reporting
+#
+# Fluid-Medium report
+#
+REPORT_DEFINE,0
+TIME,1.0
+TYPE,0
+DATA,1:2
+REPEAT,0
+TEXT,BURST
+END_REPORT
+#
+# Test Report
+#
+REPORT_DEFINE,1
+TIME,0.2
+TYPE,0
+DATA,3:1
+REPEAT,0
+TEXT,TEST
+END_REPORT
