Supercell number report

--- a/default.cfg
+++ b/default.cfg
@@ -338,7 +338,7 @@ END_EVENT
 #
 REPORT_DEFINE,0
 TIME,1.0
-TYPE,0
+TYPE,2
 DATA,1:2
 REPEAT,0
 TEXT,BURST
@@ -347,9 +347,8 @@ END_REPORT
 # Test Report
 #
 REPORT_DEFINE,1
-TIME,0.2
-TYPE,0
-DATA,3:1
-REPEAT,0
-TEXT,TEST
+TIME,1
+TYPE,1
+REPEAT,1
+TEXT,COUNT
 END_REPORT
