--- a/default.cfg
+++ b/default.cfg
@@ -169,6 +169,52 @@ LOAD_COLOUR,100
 END_SUPER
 #
 ###########################################
+# Supercell Templates
+#
+#
+# Boundary
+#
+TEMPLATE,0
+TYPE,0
+END_TEMPLATE
+#
+# Empty Space
+#
+TEMPLATE,1
+TYPE,1
+END_TEMPLATE
+#
+# Fluid
+#
+TEMPLATE,2
+TYPE,2
+VOLUME,50
+END_TEMPLATE
+#
+# Morula
+#
+TEMPLATE,3
+TYPE,3
+VOLUME,3600
+SURFACE,212
+END_TEMPLATE
+#
+###########################################
+# Map image colours to templates
+#
+#
+# Boundary
+#
+MAP_TEMPLATE,255,0
+#
+# Empty Space
+#
+MAP_TEMPLATE,0,1
+#
+# Morula
+#
+MAP_TEMPLATE,100,3
+###########################################
 #Colour Generator options
 #
 #Boundary
