--- a/default.cfg
+++ b/default.cfg
@@ -132,42 +132,6 @@ DIV_TYPE,0
 COLOUR,7
 END_TYPE
 #
-###########################################################################
-#Initial Supercells
-#
-#0 should always be boundary
-#1 should always be Empty space
-#
-#Boundary
-#
-SUPERCELL,0
-TYPE,0
-LOAD_COLOUR,255
-END_SUPER
-#
-#Empty Space
-#
-SUPERCELL,1
-TYPE,1
-LOAD_COLOUR,0
-END_SUPER
-#
-#Fluid
-#
-SUPERCELL,2
-TYPE,2
-INITIAL_VOLUME,50
-END_SUPER
-#
-# First Morula
-#
-SUPERCELL,3
-TYPE,3
-INITIAL_VOLUME,3600
-INITIAL_LENGTH,212
-LOAD_COLOUR,100
-END_SUPER
-#
 ###########################################
 # Supercell Templates
 #
@@ -176,12 +140,14 @@ END_SUPER
 #
 TEMPLATE,0
 TYPE,0
+SPECIAL,1
 END_TEMPLATE
 #
 # Empty Space
 #
 TEMPLATE,1
 TYPE,1
+SPECIAL,2
 END_TEMPLATE
 #
 # Fluid
