New report types for cell counting

--- a/default.cfg
+++ b/default.cfg
@@ -25,6 +25,7 @@ IS_STATIC,1
 IGNORE_VOLUME,1
 IGNORE_SURFACE,1
 COLOUR,0
+COUNTABLE,0
 END_TYPE
 #
 # Empty Space
@@ -36,6 +37,7 @@ IS_STATIC,0
 IGNORE_VOLUME,1
 IGNORE_SURFACE,1
 COLOUR,1
+COUNTABLE,0
 END_TYPE
 #
 # Fluid
@@ -47,6 +49,7 @@ IS_STATIC,0
 IGNORE_VOLUME,0
 IGNORE_SURFACE,1
 COLOUR,2
+COUNTABLE,0
 END_TYPE
 #
 # Morula
@@ -346,7 +349,7 @@ END_EVENT
 #
 # Reporting
 #
-# Fluid-Medium report
+# Fluid-Medium contact
 #
 REPORT_DEFINE,0
 TIME,1.0
@@ -356,11 +359,31 @@ REPEAT,0
 TEXT,BURST
 END_REPORT
 #
-# Test Report
+# Count all cells
 #
 REPORT_DEFINE,1
 TIME,1
 TYPE,1
 REPEAT,1
 TEXT,COUNT
+END_REPORT
+#
+# Count trophectoderm cells
+#
+REPORT_DEFINE,2
+TIME,1
+TYPE,3
+REPEAT,1
+DATA,5
+TEXT,TROPH
+END_REPORT
+#
+# Count fluid cells
+#REPORT_DEFINE,2
+REPORT_DEFINE,3
+TIME,1
+TYPE,3
+REPEAT,1
+DATA,2
+TEXT,FLUID
 END_REPORT
