--- a/default.cfg
+++ b/default.cfg
@@ -9,6 +9,7 @@ SIM_PARAM,OMEGA,1.0
 SIM_PARAM,LAMBDA,5.0
 SIM_PARAM,SIGMA,0.0
 SIM_PARAM,AUTO_QUIT,1
+SIM_PARAM,IMAGE,default
 #
 ###################################################################################
 # Cell Types
@@ -63,7 +64,7 @@ IGNORE_SURFACE,0
 DIV_MEAN,12
 DIV_SD,0.5
 DIV_TYPE,2
-DIV_MIN_VOL,400
+DIV_MIN_VOL,200
 COLOUR,3
 END_TYPE
 #
@@ -86,10 +87,10 @@ DO_DIVIDE,1
 IS_STATIC,0
 IGNORE_VOLUME,0
 IGNORE_SURFACE,0
-DIV_MEAN,2.0
+DIV_MEAN,1.0
 DIV_SD,0.0
 DIV_TYPE,1
-DIV_MIN_RATIO,10.0
+DIV_MIN_RATIO,8.0
 COLOUR,4
 END_TYPE
 #
@@ -111,11 +112,11 @@ END_TYPE
 #
 CELL_TYPE,7
 J,1000000.0:50.0:70.0:100.0:100.0:70.0:100.0:15.0:30.0
-DO_DIVIDE,0
+DO_DIVIDE,1
 IS_STATIC,0
 IGNORE_VOLUME,0
 IGNORE_SURFACE,0
-DIV_MEAN,12
+DIV_MEAN,16
 DIV_SD,1
 DIV_TYPE,0
 COLOUR,6
@@ -125,13 +126,15 @@ END_TYPE
 #
 CELL_TYPE,8
 J,1000000.0:50.0:30.0:100.0:100.0:100.0:100.0:30.0:15.0
-DO_DIVIDE,0
+DO_DIVIDE,1
 IS_STATIC,0
 IGNORE_VOLUME,0
 IGNORE_SURFACE,0
-DIV_MEAN,12
-DIV_SD,1
+DIV_MEAN,2.0
+DIV_SD,0.0
 DIV_TYPE,0
+DIV_TYPE,1
+DIV_MIN_RATIO,8.0
 COLOUR,7
 END_TYPE
 #
@@ -164,7 +167,7 @@ END_TEMPLATE
 #
 TEMPLATE,3
 TYPE,3
-VOLUME,3600
+VOLUME,2400
 SURFACE,212
 END_TEMPLATE
 #
@@ -314,6 +317,8 @@ WAIT_FOR_OTHER,1
 EVENT_TO_WAIT,3
 TRANSFORM_DATA,6
 DO_REPEAT,1
+DO_KILL,1
+END_REPEAT,5
 REPORT_FIRE,0
 END_EVENT
 #
@@ -327,7 +332,7 @@ TRANSFORM_TO,7
 TRANSFORM_TYPE,2
 TRANSFORM_DATA,70
 UPDATE_COLOUR,1
-UPDATE_DIV,1
+UPDATE_DIV,0
 WAIT_FOR_OTHER,1
 EVENT_TO_WAIT,1
 END_EVENT
@@ -379,11 +384,21 @@ TEXT,TROPH
 END_REPORT
 #
 # Count fluid cells
-#REPORT_DEFINE,2
+#
 REPORT_DEFINE,3
 TIME,1
 TYPE,3
 REPEAT,1
 DATA,2
 TEXT,FLUID
+END_REPORT
+#
+# Log trophectoderm adhesion
+#
+REPORT_DEFINE,4
+TIME,0.01
+TYPE,0
+REPEAT,0
+TEXT,TROPH
+DATA,15
 END_REPORT
