New report type: no neighbours of type

--- a/default.cfg
+++ b/default.cfg
@@ -399,6 +399,16 @@ REPORT_DEFINE,4
 TIME,0.01
 TYPE,0
 REPEAT,0
-TEXT,TROPH
+TEXT,TJ
 DATA,15
+END_REPORT
+#
+# Detect trophectoderm double layer
+#
+REPORT_DEFINE,5
+TIME,12
+TYPE,4
+DATA,5:1
+REPEAT,0
+TEXT,DOUBLETROPH
 END_REPORT
