Changes to default config

--- a/default.cfg
+++ b/default.cfg
@@ -1,6 +1,6 @@
 #Simulation parameters
 SIM_PARAM,MCS_HOUR_EST,500
-SIM_PARAM,MAX_HOURS,168.0
+SIM_PARAM,MAX_HOURS,144.0
 SIM_PARAM,PIXEL_SCALE,4
 SIM_PARAM,DELAY,0
 SIM_PARAM,FPS,60
@@ -13,9 +13,6 @@ SIM_PARAM,IMAGE,default
 #
 ###################################################################################
 # Cell Types
-# 
-# 1 should always be empty space
-#
 #
 # Boundary
 #
@@ -72,7 +69,11 @@ END_TYPE
 #
 CELL_TYPE,4
 J,1000000.0:50.0:50.0:40.0:35.0:100.0:100.0:100.0:100.0
-DO_DIVIDE,0
+DO_DIVIDE,1
+DIV_MEAN,12
+DIV_SD,0.5
+DIV_TYPE,2
+DIV_MIN_VOL,200
 IS_STATIC,0
 IGNORE_VOLUME,0
 IGNORE_SURFACE,0
@@ -102,7 +103,7 @@ DO_DIVIDE,1
 IS_STATIC,0
 IGNORE_VOLUME,0
 IGNORE_SURFACE,0
-DIV_MEAN,12
+DIV_MEAN,16
 DIV_SD,1
 DIV_TYPE,0
 COLOUR,5
@@ -160,7 +161,7 @@ END_TEMPLATE
 #
 TEMPLATE,2
 TYPE,2
-VOLUME,50
+VOLUME,40
 END_TEMPLATE
 #
 # Morula
@@ -260,8 +261,8 @@ END_COLOUR
 # Compaction
 #
 EVENT_DEFINE,0
-TIME_MEAN,72.0
-TIME_SD,0.5
+TIME_MEAN,42.0
+TIME_SD,2
 TRANSFORM_FROM,3
 TRANSFORM_TO,4
 UPDATE_COLOUR,0
@@ -271,7 +272,7 @@ END_EVENT
 # Trophectoderm
 #
 EVENT_DEFINE,1
-TIME_MEAN,96.0
+TIME_MEAN,72.0
 TIME_SD,1.0
 TRANSFORM_FROM,4
 TRANSFORM_TO,5
@@ -296,12 +297,12 @@ END_EVENT
 EVENT_DEFINE,3
 TIME_MEAN,0.25
 TIME_SD,0.0
-TRANSFORM_FROM,6
+TRANSFORM_FROM,5
 TRANSFORM_TO,2
 TRANSFORM_TYPE,4
 WAIT_FOR_OTHER,1
 EVENT_TO_WAIT,2
-TRANSFORM_DATA,5
+TRANSFORM_DATA,6
 DO_REPEAT,0
 END_EVENT
 #
@@ -315,10 +316,8 @@ TRANSFORM_TO,2
 TRANSFORM_TYPE,4
 WAIT_FOR_OTHER,1
 EVENT_TO_WAIT,3
-TRANSFORM_DATA,6
+TRANSFORM_DATA,2
 DO_REPEAT,1
-DO_KILL,1
-END_REPEAT,5
 REPORT_FIRE,0
 END_EVENT
 #
@@ -330,7 +329,7 @@ TIME_SD,6.0
 TRANSFORM_FROM,6
 TRANSFORM_TO,7
 TRANSFORM_TYPE,2
-TRANSFORM_DATA,70
+TRANSFORM_DATA,50
 UPDATE_COLOUR,1
 UPDATE_DIV,0
 WAIT_FOR_OTHER,1
@@ -383,16 +382,6 @@ DATA,5
 TEXT,TROPH
 END_REPORT
 #
-# Count fluid cells
-#
-REPORT_DEFINE,3
-TIME,1
-TYPE,3
-REPEAT,1
-DATA,2
-TEXT,FLUID
-END_REPORT
-#
 # Log trophectoderm adhesion
 #
 REPORT_DEFINE,4
@@ -411,4 +400,34 @@ TYPE,4
 DATA,5:1
 REPEAT,0
 TEXT,DOUBLETROPH
+END_REPORT
+#
+# Detect PE not touching fluid
+#
+REPORT_DEFINE,6
+TIME,143.0
+TYPE,4
+DATA,8:2
+REPEAT,0
+TEXT,BADPE
+END_REPORT
+#
+# Detect PE not touching Epi
+#
+REPORT_DEFINE,7
+TIME,143.0
+TYPE,4
+DATA,8:7
+REPEAT,0
+TEXT,DOUBLEPE
+END_REPORT
+#
+# Detect Epi touching troph
+#
+REPORT_DEFINE,8
+TIME,143.0
+TYPE,2
+DATA,7:5
+REPEAT,0
+TEXT,GOODEPI
 END_REPORT
