Default config updated to latest wildtype. Old demos archived

--- a/demos/defaultOld.cfg
+++ b/demos/defaultOld.cfg
@@ -83,7 +83,7 @@ END_TYPE
 # Trophectoderm
 #
 CELL_TYPE,5
-J,1000000.0:50.0:50.0:100.0:100.0:20.0:70.0:70.0:100.0
+J,1000000.0:50.0:50.0:100.0:100.0:15.0:70.0:70.0:100.0
 DO_DIVIDE,1
 IS_STATIC,0
 IGNORE_VOLUME,0
@@ -112,7 +112,7 @@ END_TYPE
 # Epiblast
 #
 CELL_TYPE,7
-J,1000000.0:50.0:70.0:100.0:100.0:70.0:100.0:15.0:20.0
+J,1000000.0:50.0:70.0:100.0:100.0:70.0:100.0:15.0:30.0
 DO_DIVIDE,1
 IS_STATIC,0
 IGNORE_VOLUME,0
@@ -126,7 +126,7 @@ END_TYPE
 # Endoderm
 #
 CELL_TYPE,8
-J,1000000.0:50.0:30.0:100.0:100.0:100.0:100.0:20.0:15.0
+J,1000000.0:50.0:30.0:100.0:100.0:100.0:100.0:30.0:15.0
 DO_DIVIDE,1
 IS_STATIC,0
 IGNORE_VOLUME,0
@@ -382,10 +382,20 @@ DATA,5
 TEXT,TROPH
 END_REPORT
 #
+# Log trophectoderm adhesion
+#
+REPORT_DEFINE,4
+TIME,0.01
+TYPE,0
+REPEAT,0
+TEXT,TJ
+DATA,15
+END_REPORT
+#
 # Detect trophectoderm double layer
 #
-REPORT_DEFINE,3
-TIME,143.0
+REPORT_DEFINE,5
+TIME,12
 TYPE,4
 DATA,5:1
 REPEAT,0
@@ -394,7 +404,7 @@ END_REPORT
 #
 # Detect PE not touching fluid
 #
-REPORT_DEFINE,4
+REPORT_DEFINE,6
 TIME,143.0
 TYPE,4
 DATA,8:2
@@ -404,7 +414,7 @@ END_REPORT
 #
 # Detect PE not touching Epi
 #
-REPORT_DEFINE,5
+REPORT_DEFINE,7
 TIME,143.0
 TYPE,4
 DATA,8:7
@@ -414,100 +424,10 @@ END_REPORT
 #
 # Detect Epi touching troph
 #
-REPORT_DEFINE,6
+REPORT_DEFINE,8
 TIME,143.0
 TYPE,2
 DATA,7:5
 REPEAT,0
 TEXT,GOODEPI
-END_REPORT
-#
-# Count PE cells
-#
-REPORT_DEFINE,7
-TIME,1
-TYPE,3
-REPEAT,1
-DATA,8
-TEXT,PECOUNT
-END_REPORT
-#
-# Count EPI cells touching fluid
-#
-REPORT_DEFINE,8
-TIME,143.0
-TYPE,5
-REPEAT,0
-DATA,7:2
-TEXT,EPIFLUID
-END_REPORT
-#
-# Count EPI cells
-#
-REPORT_DEFINE,9
-TIME,1
-TYPE,3
-REPEAT,1
-DATA,7
-TEXT,EPICOUNT
-END_REPORT
-#
-# Count ICM cells
-#
-REPORT_DEFINE,10
-TIME,1
-TYPE,3
-REPEAT,1
-DATA,6
-TEXT,ICMCOUNT
-END_REPORT
-#
-# Count morula cells touching medium
-#
-REPORT_DEFINE,11
-TIME,1
-TYPE,5
-REPEAT,1
-DATA,3:1
-TEXT,MORUMED
-END_REPORT
-#
-# Count compact morula cells touching medium
-#
-REPORT_DEFINE,12
-TIME,1
-TYPE,5
-REPEAT,1
-DATA,4:1
-TEXT,COMPMORUMED
-END_REPORT
-#
-# Count Morula cells
-#
-REPORT_DEFINE,13
-TIME,1
-TYPE,3
-REPEAT,1
-DATA,3
-TEXT,MORUCOUNT
-END_REPORT
-#
-# Count Compact Morula cells
-#
-REPORT_DEFINE,14
-TIME,1
-TYPE,3
-REPEAT,1
-DATA,4
-TEXT,MORUCOMPCOUNT
-END_REPORT
-#
-# Count fluid cells
-#
-REPORT_DEFINE,15
-TIME,1
-TYPE,3
-REPEAT,1
-DATA,2
-TEXT,FLUIDCOUNT
 END_REPORT
